<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">设置</string>
    <string name="action_signin">注册</string>
    <string name="app_name">微宝</string>
    <string name="title_activity_login">微宝</string>
    <string name="action_logout">登出</string>
    <string name="edit_account">请输入手机号码/邮箱</string>
    <string name="edit_password">请输入密码</string>
    <string name="login_button">登陆</string>
    <string name="forgetpassword_button">忘记密码</string>
    <string name="rem_key">记住密码</string>
    <string name="auto_login">自动登陆</string>
    <string name="title_activity_display_message">MyMessage</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_login">登陆</string>
    <string name="title_activity_weibao">WeibaoActivity</string>
    <string name="title_activity_sign_up">注册</string>
    <string name="exit_confirm">确认退出微宝吗？</string>
    <string name="get_confirm_key_button">免费获取验证码</string>
    <string name="edit_phone_num">请输入您的手机号码</string>
    <string name="edit_email">请输入您的邮箱地址</string>
    <string name="edit_confirm_key">请输入验证码</string>
    <string name="user_rules_button">微宝使用条约</string>
    <string name="agree_with">已阅读</string>
    <string name="signin_button">注册</string>
    <string name="weibao_tab">微宝</string>
    <string name="find_tab">发现</string>
    <string name="scan_tab">扫</string>
    <string name="me_tab">我</string>
    <string name="title_activity_main">微宝</string>
    <string name="search_title">请输入商户名称</string>
    <string name="my_bills">我的账单</string>
    <string name="my_settings">设置</string>
    <string name="title_activity_find_password">找回密码</string>
    <string name="find_by_phone">手机找回密码</string>
    <string name="find_by_email">邮箱找回密码</string>
    <string name="submit_button">提交</string>
    <string name="all_bussiness">所有商户</string>
    <string name="subscription_bussiness">我的订阅</string>
    <string name="nearby_bussiness">附近商户</string>
    <string name="info_bussiness">商户信息</string>
    <string name="saomiaoButton">扫描</string>
    <string name="bookmark_picker_name">Bookmarks</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_back">Back</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_done">Done</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_google_shopper">Shopper</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product Search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">共享应用</string>
    <string name="button_share_bookmark">分享书签</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">分享剪切板</string>
    <string name="button_share_contact">分享联系人</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="history_clear_text">删除历史</string>
    <string name="history_clear_one_history_text">Clear</string>
    <string name="history_email_title">Barcode Scanner history</string>
    <string name="history_empty">Empty</string>
    <string name="history_empty_detail">No barcode scans have been recorded</string>
    <string name="history_send">发送历史</string>
    <string name="history_title">History</string>
    <string name="menu_encode_mecard">Use MECARD</string>
    <string name="menu_encode_vcard">Use vCard</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_default_format">格式</string>
    <string name="msg_default_meta">元数据</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_default_time">时间</string>
    <string name="msg_default_type">类型</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_google_books">Google Books</string>
    <string name="msg_google_product">Google Product Search</string>
    <string name="msg_google_shopper_missing">Google Shopper is not installed</string>
    <string name="msg_install_google_shopper">Google Shopper combines barcode scanning with online and local prices, reviews and more without opening the browser. Would you like to try it?</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_redirect">Redirect</string>
    <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
    <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
    <string name="msg_sbc_no_page_returned">No page returned</string>
    <string name="msg_sbc_page">Page</string>
    <string name="msg_sbc_results">Results</string>
    <string name="msg_sbc_searching_book">Searching book\u2026</string>
    <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
    <string name="msg_sbc_unknown_page">Unknown page</string>
    <string name="msg_share_explanation">你可以通过在自己的手机上显示条码，并使用其他手机扫描此条码的方式进行分享：）！！！啦啦~</string>
    <string name="msg_share_subject_line">Here are the contents of a barcode I scanned</string>
    <string name="msg_share_text">Or type some text and press Enter</string>
    <string name="msg_sure">Are you sure?</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_auto_focus_title">Use auto focus</string>
    <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
    <string name="preferences_bulk_mode_title">Bulk scan mode</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
    <string name="preferences_custom_product_search_title">Custom search URL</string>
    <string name="preferences_decode_1D_title">1D barcodes</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
    <string name="preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
    <string name="preferences_disable_continuous_focus_title">No continuous focus</string>
    <string name="preferences_disable_exposure_title">No exposure</string>
    <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
    <string name="preferences_front_light_title">Use front light</string>
    <string name="preferences_front_light_auto">Automatic</string>
    <string name="preferences_front_light_off">Off</string>
    <string name="preferences_front_light_on">On</string>
    <string name="preferences_general_title">General settings</string>
    <string name="preferences_invert_scan_title">Invert scan</string>
    <string name="preferences_invert_scan_summary">Scan for white barcodes on black background. Not available on some devices.</string>
    <string name="preferences_name">Settings</string>
    <string name="preferences_play_beep_title">Beep</string>
    <string name="preferences_remember_duplicates_summary">Store multiple scans of the same barcode in History</string>
    <string name="preferences_remember_duplicates_title">Remember duplicates</string>
    <string name="preferences_result_title">Result settings</string>
    <string name="preferences_scanning_title">When scanning for barcodes, decode\u2026</string>
    <string name="preferences_search_country">Search country</string>
    <string name="preferences_try_bsplus">Try Barcode Scanner+</string>
    <string name="preferences_try_bsplus_summary">Enhanced with new features and interface</string>
    <string name="preferences_supplemental_summary">Try to retrieve more information about the barcode contents</string>
    <string name="preferences_supplemental_title">Retrieve more info</string>
    <string name="preferences_vibrate_title">Vibrate</string>
    <string name="result_address_book">Found contact info</string>
    <string name="result_calendar">Found calendar event</string>
    <string name="result_email_address">Found email address</string>
    <string name="result_geo">Found geographic coordinates</string>
    <string name="result_isbn">Found book</string>
    <string name="result_product">Found product</string>
    <string name="result_sms">Found SMS address</string>
    <string name="result_tel">Found phone number</string>
    <string name="result_text">Found plain text</string>
    <string name="result_uri">Found URL</string>
    <string name="result_wifi">Found WLAN Configuration</string>
    <string name="sbc_name">Google Book Search</string>
    <string name="wifi_changing_network">Requesting connection to network\u2026</string>
    <string name="wifi_ssid_label">Network Name</string>
    <string name="wifi_type_label">Type</string>
    <string name="app_picker_name">Applications</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_me__info">个人信息</string>
	
    <string name="SelfImage4thTab">头像</string>
    <string name="Name4thTab">名字</string>
    <string name="MyAccount4thTab">我的账号</string>
    <string name="BitmapCard4thTab">二维码名片</string>
    <string name="Gender4thTab">性别</string>
    <string name="District4thTab">地区</string>
    <string name="SelfImageContentsDiscription4thTab">我的头像</string>
    <string name="voidString">null</string>
    <string name="Signature4thTab">个性签名</string>
    <string name="FemaleString">女</string>
    <string name="MaleString">男</string>
    <string name="GenderUnknownString">未填写</string>
    <string name="editNameHint">好名字可以让你的好朋友更容易记住你：）</string>
    <string name="MakeAvatarButtonText">拍照</string>
    <string name="GetAvatarButtonText">选择本地图片</string>
    <string name="CancelButtonText">取消</string>
</resources>
