<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".SignUpActivity" 
    android:background="#fff">

    <EditText
        android:id="@+id/phone_num"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="50dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:ems="10"
        android:hint="@string/edit_phone_num"
        android:textColorHint="#dcdcdc"
        android:background="@drawable/input_bg"
        >
		
        <requestFocus />
    </EditText>
    <LinearLayout 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:layout_marginBottom="10dp"
    	android:layout_marginLeft="5dp"
    	android:layout_marginRight="5dp">

    	<EditText
    	    android:id="@+id/confirm_key"
    	    android:inputType="textEmailAddress"
    	    android:layout_width="139dp"
    	    android:layout_height="40dp"
    	    android:layout_marginRight="20dp"
    	    android:background="@drawable/input_bg"
    	    android:hint="@string/edit_confirm_key"
    	    android:textColorHint="#dcdcdc"
    	    android:paddingLeft="15dp"
    	    android:paddingRight="15dp" />

    	<Button
    	    android:layout_width="match_parent"
    	    android:layout_height="40dp"
    	    android:background="@drawable/login_btn_bg"
    	    android:onClick="logIn"
    	    android:text="@string/get_confirm_key_button"
    	    android:textColor="#ffffff" 
    	    android:textSize="15sp"/>

	</LinearLayout>
	<LinearLayout
	    android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:layout_marginBottom="30dp"
    	android:layout_marginLeft="5dp"
    	android:layout_marginRight="5dp">
    <RadioButton 
        android:id="@+id/radio0" 
        android:layout_width="wrap_content" 
        android:text="@string/agree_with" 
        android:textColor="#b7b7b7"
        android:layout_height="wrap_content" 
        android:checked="false"
        android:button="@color/checkbox_bg"
        android:layout_marginRight="5dp"
        android:onClick="RadioAdapter"/>
    <Button
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:background="@android:color/transparent"
        android:text="@string/user_rules_button"
        android:textSize="15sp"
        android:textColor="#5599dd"
        />
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signin_button"
        android:textColor="#ffffff"
        android:background="@drawable/login_btn_bg"
        android:onClick="logIn"
        />
	    
	
</LinearLayout>
