<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".LogInActivity" 
    android:background="#fff">

<TabHost
    android:id="@+id/find_tabhost"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >
<LinearLayout  
            android:orientation="vertical"  
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content">  
    <TabWidget
        android:id="@android:id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@null"
        >
        
    </TabWidget>
	<FrameLayout android:id="@android:id/tabcontent"  
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">  

                    <EditText
        				android:id="@+id/find_phone_num"
        				android:inputType="phone"
        				android:layout_width="match_parent"
        				android:layout_height="40dp"
        				android:layout_marginRight="@dimen/activity_horizontal_margin"
    					android:layout_marginLeft="@dimen/activity_horizontal_margin"
        				android:layout_marginBottom="20dp"
        				android:paddingLeft="15dp"
        				android:paddingRight="15dp"
        				android:ems="10"
        				android:hint="@string/edit_phone_num"
        				android:textColorHint="#dcdcdc"
        				android:background="@drawable/input_bg"
        			/>
        			
        			<EditText
        				android:id="@+id/find_email"
        				android:inputType="textEmailAddress"
        				android:layout_width="match_parent"
        				android:layout_height="40dp"
        				android:layout_marginRight="@dimen/activity_horizontal_margin"
    					android:layout_marginLeft="@dimen/activity_horizontal_margin"
        				android:layout_marginBottom="20dp"
        				android:paddingLeft="15dp"
        				android:paddingRight="15dp"
        				android:ems="10"
        				android:hint="@string/edit_email"
        				android:textColorHint="#dcdcdc"
        				android:background="@drawable/input_bg"
        			/>
		
        
         </FrameLayout>
         <requestFocus />
         </LinearLayout>
         </TabHost>
    <LinearLayout 
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:layout_marginBottom="40dp"
    	android:paddingLeft="25dp"
    	android:paddingRight="25dp">

    	<EditText
    	    android:id="@+id/find_confirm_key"
    	    android:inputType="textEmailAddress"
    	    android:layout_width="139dp"
    	    android:layout_height="40dp"
    	    android:layout_marginRight="15dp"
    	    android:background="@drawable/input_bg"
    	    android:hint="@string/edit_confirm_key"
    	    android:textColorHint="#dcdcdc"
    	    android:paddingLeft="15dp"
    	    android:paddingRight="15dp" />

    	<Button
    	    android:layout_width="match_parent"
    	    android:layout_height="40dp"
    	    android:background="@drawable/login_btn_bg"
    	    android:text="@string/get_confirm_key_button"
    	    android:textColor="#ffffff" 
    	    android:textSize="15sp"
    	    android:onClick="Send"
    	    />

	</LinearLayout>
	
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
    	android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/submit_button"
        android:textColor="#ffffff"
        android:background="@drawable/login_btn_bg"
        android:onClick="Configure"
        />
    

</LinearLayout>
